js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-block-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
{
import
.
source
(
'
<
module
source
>
'
)
;
}
;
reportCompare
(
0
0
)
;
