js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-not-extensible-args.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
